--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 body {background: #f2dede;}
-h3 {text-align:center; margin:auto; color:#d43f3a;}
+h3 {font-size:6em; text-align:center; margin:auto; color:#d43f3a;}
 </style>
 
-<h3 style="text-align:center; margin:auto;">欢迎阳姐回家 (*╹▽╹*)</h3>
+<h3>欢迎阳姐回家 (*╹▽╹*)</h3>
