--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="imagetoolbar" content="no" />
+<meta name="referrer" content="no-referrer" />
 <link rel="stylesheet" href="styles/layout.css" type="text/css" />
 <script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 </head>
