--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $.ajax({
         		var _class = 'class="last"';
         	}else _class='';
         	html += '<li '+_class+'><div class="fl_left"><img src="'+array[index].thumbnail+'" /></div>'+
-        			'<div class="fl_right"><h2><a target="_blank" href="'+array[index].url+'">'+array[index].news_id+'</a></h2><p>'+array[index].title+'</p></div>'+
+        			'<div class="fl_right"><h2><a target="_blank" href="http://daily.zhihu.com/story/'+array[index].news_id+'">'+array[index].news_id+'</a></h2><p>'+array[index].title+'</p></div>'+
         			'</li>';
         })
       html += '</ul><br class="clear" />';
