--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="wrapper col1">
   <div id="header">
     <div id="logo">
-      <h1><a href="#">BusinessToday</a></h1>
+      <h1><a href="#">课程设计之私人博客系统-by 王刚</a></h1>
       <p><strong>Free CSS Website Template</strong></p>
     </div>
     <br class="clear" />
