--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div class="wrapper col1">
   <div id="header">
     <div id="logo">
-      <h1><a href="#">课程设计之私人博客系统-by 王刚</a></h1>
-      <p><strong>Free CSS Website Template</strong></p>
+      <h1><a href="#">BLOG</a></h1>
+      <p><strong>课程设计之私人博客系统-by 王刚</strong></p>
     </div>
     <br class="clear" />
   </div>
@@ -24,17 +24,14 @@
   <div id="topbar">
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="style-demo.html">Style Demo</a></li>
-        <li><a href="full-width.html">Full Width</a></li>
-        <li><a href="#">DropDown</a>
-         <!--  <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>-->
+        <li class="active"><a href="index.html">首页</a></li>
+        <li><a href="tech.html">技术页面</a></li>
+        <li><a href="javascript:;">项目总结</a>
+         <ul>
+            <li><a href="summary.html">银联二维码支付</a></li>
+            <li><a href="summary1.html">微信及支付宝支付</a></li>
+          </ul>
         </li>
-        <li class="last"><a href="#">A Long Link Text</a></li>
       </ul>
     </div>
     <br class="clear" />
