--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <li><a href="tech.html">技术页面</a></li>
         <li><a href="javascript:;">项目总结</a>
          <ul>
-            <li><a href="summary.html">银联二维码支付</a></li>
-            <li><a href="summary1.html">微信及支付宝支付</a></li>
+            <li><a href="union.html">银联二维码支付</a></li>
+            <li><a href="payment.html">微信及支付宝支付</a></li>
           </ul>
         </li>
       </ul>
