--- a/tech.html
+++ b/tech.html
@@ -1,1 +1,64 @@
-技术页面
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<title>blog</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="imagetoolbar" content="no" />
+<meta name="referrer" content="no-referrer" />
+<link rel="stylesheet" href="styles/layout.css" type="text/css" />
+<script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+</head>
+<body id="top">
+<div class="wrapper col1">
+  <div id="header">
+    <div id="logo">
+      <h1><a href="#">BLOG</a></h1>
+      <p><strong>课程设计之私人博客系统-by 王刚</strong></p>
+    </div>
+    <br class="clear" />
+  </div>
+</div>
+<div class="wrapper col2">
+  <div id="topbar">
+    <div id="topnav">
+      <ul>
+        <li><a href="index.html">首页</a></li>
+        <li class="active"><a href="tech.html">技术页面</a></li>
+        <li><a href="javascript:;">项目总结</a>
+         <ul>
+            <li><a href="union.html">银联二维码支付</a></li>
+            <li><a href="payment.html">微信及支付宝支付</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <br class="clear" />
+  </div>
+</div>
+<div style="padding-bottom: 10px; background: #fff;"></div>
+<div class="wrapper col4">
+  <div id="services"><span id="hot"></span><span id="latest"></span></div>
+</div>
+<div class="wrapper col5">
+    <br class="clear" />
+  </div>
+</div>
+<script type="text/javascript">
+
+</script>
+<div class="wrapper col6">
+  <div id="footer">
+    <br class="clear" />
+  </div>
+</div>
+<div class="wrapper col7">
+  <div id="copyright">
+    <p class="fl_left">Copyright &copy; 2018 - <a href="https://github.com/wang-tom/blog">github</a> All Rights Reserved</p>
+    <p class="fl_right">wang-tom github page</p>
+    <br class="clear" />
+  </div>
+</div>
+</body>
+</html>
